src/main/java/com/example/citron/web/errors/tree/NoSpaceException.java
package com.example.citron.web.errors.tree;

public class NoSpaceException extends RuntimeException {
    public NoSpaceException(String message) {
        super(message);
    }
}
